phd thesis framework

--- a/tex/Cover.tex
+++ b/tex/Cover.tex
@@ -3,7 +3,7 @@
 % 保密文字位置可能有问题，需要到cls文件中调整
 \secretlevel{保密} \secretyear{2}
 
-\ctitle{同济大学学位论文 \LaTeX{} 模板使用示例}
+\ctitle{盾构隧道服役性能评估与分析服务平台}
 % 按照申请工学学位设计。如有其它需要，请修改相应文字。
 \makeatletter
   \iftongji@doctor
@@ -16,19 +16,19 @@
 
 \makeatother
 
-\cauthor{同济人} % 姓名
+\cauthor{林晓东} % 姓名
 
-\snumber{1234567}  % 学号
+\snumber{1310199}  % 学号
 
-\cdepartment{某某某某某某学院}
+\cdepartment{土木工程学院}
 
 \cmajorfirst{工学}
 
-\cmajorsecond{\XeLaTeX{}}
+\cmajorsecond{土木工程}
 
-\csupervisor{X ~ 教授}
+\csupervisor{丁文其 ~ 教授}
 
-\cassosupervisor{}
+\cassosupervisor{李晓军 ~ 教授}
 % 如果没有副指导老师或者联合指导老师，把各自{}中内容留空即可。
 
 \ccosupervisor{}
@@ -51,18 +51,18 @@
 %\efunds{Supported by the Natural Science Foundation of China（No.XXXXXX）}
 
 
-\etitle{A Simple Sample of Tongji Thesis\\ Using \tongjithesis{}}
+\etitle{Undefined}
 
-\eauthor{Tongji Ren}
+\eauthor{Xiaodong Lin}
 
-\edepartment{School of ???????}
+\edepartment{College of Civil Engineering}
 
-\emajorfirst{Engineering}%Science in
+\emajorfirst{Engineering}
 
-\emajorsecond{\XeLaTeX{}}
+\emajorsecond{Civil Engineering}
 
-\esupervisor{Prof. ~ X}
-\eassosupervisor{}
+\esupervisor{Prof. ~ Wenqi Ding}
+\eassosupervisor{Prof. ~ Xiaojun Li}
 
 % 这个日期也会自动生成，你要改么？
 %\edate{March, 2017}
