--- a/thesis.tex
+++ b/thesis.tex
@@ -18,7 +18,7 @@
 % 显示页面布局
 %\usepackage{layout}
 
-\def\myname{同济人}
+\def\myname{林晓东}
 
 \begin{document}
 
@@ -49,8 +49,12 @@
 
 %%% 正文
 \mainmatter
-\include{tex/Chap_Intro}
-\include{tex/Chap_Basis}
+\include{tex/Chap1}
+\include{tex/Chap2}
+\include{tex/Chap3}
+\include{tex/Chap4}
+\include{tex/Chap5}
+\include{tex/Chap6}
 
 %%% 其它部分
 \backmatter
