更新绪论研究现状

--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -1,68 +1,394 @@
 % Encoding: UTF-8
-@Book{tex,
-	author    = "Donald E. Knuth",
-	title     = "The {\TeX} Book",
-	publisher = "Addison-Wesley Publishing Company",
-	address   = "Reading, MA",
-	year      = 1989,
-	edition   = "15th",
+
+@Misc{住房和城乡建设部,
+  author = {住房和城乡建设部},
+  title  = {国家发展改革委关于印发全国城市市政基础设施建设},
+  year   = {2017},
+  lang   = {zh},
+  pinyin = {zhufanghechengxiangjianshebu},
+  url    = {http://www.mohurd.gov.cn/wjfb/201705/t20170525_231994.html},
 }
 
-@Book{companion,
-	author    = "Michel Goosens and Frank Mittelbach and Alexander Samarin",
-	title     = "The {\LaTeX} Companion",
-	publisher = "Addison-Wesley Publishing Company",
-	address   = "Reading, MA",
-	PAGES = "112--125",
-	year      = 1994,
+@Misc{ASCE2017,
+  author = {ASCE},
+  title  = {2017 Infrastructure Report Card},
+  year   = {2017},
+  url    = {http://www.infrastructurereportcard.org},
 }
 
-@INPROCEEDINGS{cnproceed,
-	author =       {王重阳 and 黄药师 and 欧阳峰 and 洪七公 and 段皇帝},
-	title =        {武林高手从入门到精通},
-	booktitle =    {第~$N$~次华山论剑},
-	year =         2006,
-	address =      {西安, 中国},
-	month =        sep,
-	lang =         "zh",
+@Book{日本公路协会2000公路隧道维持管理便览,
+  title     = {公路隧道维持管理便览},
+  publisher = {丸善株式会社出版事业部},
+  year      = {2000},
+  author    = {日本公路协会},
+  address   = {京东},
+  lang      = {zh},
+  pinyin    = {ribengongluxiehui},
 }
 
-@ARTICLE{cnarticle,
-	AUTHOR =       "贾宝玉 and 林黛玉 and 薛宝钗 and 贾探春",
-	TITLE =        "论刘姥姥食量大如牛之现实意义",
-	JOURNAL =      "红楼梦杂谈",
-	PAGES =        "260--266",
-	VOLUME =       224,
-	YEAR =         1800,
-	LANG =         "zh",
+@Book{FHWA2005Highway,
+  title     = {Highway and rail transit tunnel inspection manual},
+  publisher = {Federal highway administration},
+  year      = {2005},
+  author    = {FHWA},
+  address   = {US},
 }
 
-@MastersThesis{zhubajie,
-	author =       {猪八戒},
-	title =        {论流体食物的持久保存},
-	school =       {广寒宫大学},
-	year =         2005,
-	address =      {北京},
-	lang =         "zh",
+@Book{GB501572013,
+  title     = {地铁设计规范},
+  publisher = {中华人民共和国建设部},
+  year      = {2013},
+  author    = {GB50157},
+  address   = {北京},
+  lang      = {zh},
+  pinyin    = {gb50157},
 }
 
-@MastersThesis{春军伟2014含充填物裂隙压剪扩展行为的试验与数值模拟研究,
-	author =       {春军伟},
-	title =        {含充填物裂隙压剪扩展行为的试验与数值模拟研究},
-	school =       {同济大学},
-	year =         2014,
-	address =      {上海},
-	lang =         "zh",
+@Book{DGTJ0821232013,
+  title     = {盾构法隧道结构服役性能鉴定规范},
+  publisher = {上海市城乡建设和交通委员会},
+  year      = {2013},
+  author    = {DG/TJ08-2123-2013},
+  address   = {上海},
+  lang      = {zh},
+  pinyin    = {dgtj0821232013},
 }
 
-@PhdThesis{shaheshang,
-  author  = {沙和尚 and 孙悟空 and 唐僧},
-  title   = {论流沙河的综合治理},
-  school  = {清华大学},
-  year    = {2005},
+@Misc{轨道2017,
+  author = {轨道城市},
+  title  = {国内各城市轨道交通运营里程及排名车型速度统计},
+  year   = {2017},
+  lang   = {zh},
+  pinyin = {guidaochengshi},
+  url    = {http://mini.eastday.com/mobile/170205004851069.html},
+}
+
+@PhdThesis{刘涛2008既有盾构隧道结构性能评价研究,
+  author = {刘涛},
+  title  = {既有盾构隧道结构性能评价研究},
+  school = {同济大学},
+  year   = {2008},
+  lang   = {zh},
+  pages  = {1-161},
+  pinyin = {liutao},
+}
+
+@PhdThesis{唐亮2008隧道病害调查分析及衬砌结构的风险分析与控制研究,
+  author = {唐亮},
+  title  = {隧道病害调查分析及衬砌结构的风险分析与控制研究},
+  school = {浙江大学},
+  year   = {2008},
+  lang   = {zh},
+  pinyin = {tangliang},
+}
+
+@Article{杨彤瑶2013基于改进主元分析方法的隧道应变实时监测预警系统,
+  author  = {杨彤瑶 and 王彬 and 李川 and 何弼 and 熊新},
+  title   = {基于改进主元分析方法的隧道应变实时监测预警系统},
+  journal = {计算机应用},
+  year    = {2013},
+  volume  = {33},
+  number  = {11},
+  pages   = {3284-3287},
+  lang    = {zh},
+  pinyin  = {yangtongyao},
+}
+
+@InProceedings{李明2015基于功效系数法的隧道结构健康监测系统预警研究,
+  author    = {李明 and 陈卫忠 and 杨建平 and 肖正龙},
+  title     = {基于功效系数法的隧道结构健康监测系统预警研究},
+  booktitle = {全国桩基工程学术会议},
+  year      = {2015},
+  lang      = {zh},
+  pinyin    = {limingchenweizhongyangjianping},
+}
+
+@PhdThesis{吴江滨2004铁路运营隧道衬砌状态评估体系的建立及工程应用研究,
+  author  = {吴江滨},
+  title   = {铁路运营隧道衬砌状态评估体系的建立及工程应用研究},
+  school  = {北京交通大学},
+  year    = {2004},
   address = {北京},
   lang    = {zh},
-  pinyin  = {shaheshang},
+  pinyin  = {wujiangbin},
+}
+
+@PhdThesis{罗鑫2008公路隧道健康状态评估方法及系统研究,
+  author  = {罗鑫},
+  title   = {公路隧道健康状态评估方法及系统研究},
+  school  = {同济大学},
+  year    = {2007},
+  address = {上海},
+  lang    = {zh},
+  pinyin  = {luoxin},
+}
+
+@Article{N2011Probabilistic,
+  author  = {Nývlt, Ondřej and Prívara, Samuel and Ferkl, Lukáš},
+  title   = {Probabilistic risk assessment of highway tunnels},
+  journal = {Tunnelling \& Underground Space Technology Incorporating Trenchless Technology Research},
+  year    = {2011},
+  volume  = {26},
+  number  = {1},
+  pages   = {71-82},
+}
+
+@Article{Yuan2012Assessment,
+  author  = {Yuan, Yong and Bai, Yun and Liu, Jianhang},
+  title   = {Assessment service state of tunnel structure},
+  journal = {Tunnelling \& Underground Space Technology Incorporating Trenchless Technology Research},
+  year    = {2012},
+  volume  = {27},
+  number  = {1},
+  pages   = {72-85},
+}
+
+@Article{Zhang2014Fuzzy,
+  author  = {Zhang, Wei and Sun, Ke and Lei, Changzheng and Zhang, Yuncong and Li, Huixin and Jr, Bill F. Spencer},
+  title   = {Fuzzy Analytic Hierarchy Process Synthetic Evaluation Models for the Health Monitoring of Shield Tunnels},
+  journal = {Computer‐aided Civil \& Infrastructure Engineering},
+  year    = {2014},
+  volume  = {29},
+  number  = {9},
+  pages   = {676–688},
+}
+
+@Article{Naggar2012Approximate,
+  author  = {Naggar, Hany El and Hinchberger, Sean D.},
+  title   = {Approximate evaluation of stresses in degraded tunnel linings},
+  journal = {Soil Dynamics \& Earthquake Engineering},
+  year    = {2012},
+  volume  = {43},
+  pages   = {45-57},
+}
+
+@Article{Cavalaro2011Structural,
+  author  = {Cavalaro, S. H. P. and Blom, C. B. M. and Walraven, J. C. and Aguado, A.},
+  title   = {Structural analysis of contact deficiencies in segmented lining},
+  journal = {Tunnelling \& Underground Space Technology Incorporating Trenchless Technology Research},
+  year    = {2011},
+  volume  = {26},
+  number  = {6},
+  pages   = {734-749},
+}
+
+@Article{Li2015Experimental,
+  author  = {Li, Xiaojun and Yan, Zhiguo and Wang, Zhen and Zhu, Hehua},
+  title   = {Experimental and analytical study on longitudinal joint opening of concrete segmental lining},
+  journal = {Tunnelling and Underground Space Technology incorporating Trenchless Technology Research},
+  year    = {2015},
+  volume  = {46},
+  number  = {46},
+  pages   = {52-63},
+}
+
+@Article{Li2015A,
+  author  = {Li, Xiaojun and Yan, Zhiguo and Wang, Zhen and Zhu, Hehua},
+  title   = {A progressive model to simulate the full mechanical behavior of concrete segmental lining longitudinal joints},
+  journal = {Engineering Structures},
+  year    = {2015},
+  volume  = {93},
+  pages   = {97-113},
+}
+
+@Article{袁勇2006运营越江隧道服役现状调查与检测评估,
+  author  = {袁勇 and 刘涛 and 柳献},
+  title   = {运营越江隧道服役现状调查与检测评估},
+  journal = {东南大学学报(自然科学版)},
+  year    = {2006},
+  number  = {s2},
+  pages   = {83-89},
+  lang    = {zh},
+  pinyin  = {yuanyongliutaoliuxian},
+}
+
+@Article{季倩倩2009带裂缝的盾构隧道衬砌力学模型研究,
+  author  = {季倩倩},
+  title   = {带裂缝的盾构隧道衬砌力学模型研究},
+  journal = {地下空间与工程学报},
+  year    = {2009},
+  volume  = {5},
+  number  = {a02},
+  pages   = {1480-1483},
+  lang    = {zh},
+  pinyin  = {jiqianqian},
+}
+
+@Article{王如路2013超载作用下软土盾构隧道横向变形机理及控制指标研究,
+  author  = {王如路 and 张冬梅},
+  title   = {超载作用下软土盾构隧道横向变形机理及控制指标研究},
+  journal = {岩土工程学报},
+  year    = {2013},
+  volume  = {35},
+  number  = {6},
+  pages   = {1092-1101},
+  lang    = {zh},
+  pinyin  = {wangruluzhangdongmei},
+}
+
+@Article{刘曙光2012盾构隧道混凝土管片的承载力退化模型,
+  author  = {刘曙光 and 余红发 and 江大虎 and 李强 and 卢一亭 and 马好霞},
+  title   = {盾构隧道混凝土管片的承载力退化模型},
+  journal = {混凝土},
+  year    = {2012},
+  number  = {7},
+  pages   = {108-113},
+  lang    = {zh},
+  pinyin  = {liushuguangyuhongfajiangdahu},
+}
+
+@Article{Marchand2002Theoretical,
+  author  = {Marchand, J. and Samson, E. and Maltais, Y. and Beaudoin, J. J.},
+  title   = {Theoretical analysis of the effect of weak sodium sulfate solutions on the durability of concrete},
+  journal = {Cement \& Concrete Composites},
+  year    = {2002},
+  volume  = {24},
+  number  = {3–4},
+  pages   = {317-329},
+}
+
+@Article{Liu2014A,
+  author  = {Liu, S. and Liu, X. and Yuan, Y. and He, P. F. and Mang, H. A.},
+  title   = {A Stochastic Multi-Scale Model for Prediction of the Autogenous Shrinkage Deformations of Early-age Concrete},
+  journal = {Computers Materials \& Continua},
+  year    = {2014},
+  volume  = {39},
+  number  = {2},
+  pages   = {85-112},
+}
+
+@Article{李忠2009氯离子侵蚀盾构隧道衬砌结构性能退化试验,
+  author  = {李忠 and 陈海明 and 孙富学 and 胡向东},
+  title   = {氯离子侵蚀盾构隧道衬砌结构性能退化试验},
+  journal = {地下空间与工程学报},
+  year    = {2009},
+  volume  = {5},
+  number  = {a6},
+  pages   = {1092-1097},
+  lang    = {zh},
+  pinyin  = {lizhongchenhaimingsunfuxue},
+}
+
+@Article{张红光2014开裂混凝土内氯离子扩散机理及数值模拟研究,
+  author  = {张红光 and 王曙光 and 刘伟庆 and 徐锋 and 刘鑫},
+  title   = {开裂混凝土内氯离子扩散机理及数值模拟研究},
+  journal = {混凝土},
+  year    = {2014},
+  number  = {9},
+  pages   = {19-25},
+  lang    = {zh},
+  pinyin  = {zhanghongguangwangshuguangliuweiqing},
+}
+
+@Article{Madanat1997Probabilistic,
+  author  = {Madanat, Samer M. and Karlaftis, Matthew G. and Mccarthy, Patrick S.},
+  title   = {Probabilistic Infrastructure Deterioration Models with Panel Data},
+  journal = {Journal of Infrastructure Systems},
+  year    = {1997},
+  volume  = {3},
+  number  = {3},
+  pages   = {4-9},
+}
+
+@Article{prozzi2001modeling,
+  author  = {Prozzi, Jorge A},
+  title   = {Modeling pavement performance by combining field and experimental data},
+  journal = {University of California Transportation Center},
+  year    = {2001},
+}
+
+@Article{ching2009bayesian,
+  author    = {Ching, Jianye and Leu, Sou-Sen},
+  title     = {Bayesian updating of reliability of civil infrastructure facilities based on condition-state data and fault-tree model},
+  journal   = {Reliability Engineering \& System Safety},
+  year      = {2009},
+  volume    = {94},
+  number    = {12},
+  pages     = {1962--1974},
+  publisher = {Elsevier},
+}
+
+@Article{wang2011pavement,
+  author    = {Wang, Kelvin CP and Li, Qiang},
+  title     = {Pavement smoothness prediction based on fuzzy and gray theories},
+  journal   = {Computer-Aided Civil and Infrastructure Engineering},
+  year      = {2011},
+  volume    = {26},
+  number    = {1},
+  pages     = {69--76},
+  publisher = {Wiley Online Library},
+}
+
+@Article{camahan1987optimal,
+  author    = {Camahan, JV and Davis, WJ and Shahin, MY and Keane, PL and Wu, MI},
+  title     = {Optimal maintenance decisions for pavement management},
+  journal   = {Journal of Transportation Engineering},
+  year      = {1987},
+  volume    = {113},
+  number    = {5},
+  pages     = {554--572},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Article{destefano1998method,
+  author    = {DeStefano, Paul D and Grivas, Dimitri A},
+  title     = {Method for estimating transition probability in bridge deterioration models},
+  journal   = {Journal of Infrastructure Systems},
+  year      = {1998},
+  volume    = {4},
+  number    = {2},
+  pages     = {56--62},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Article{mishalani2002computation,
+  author    = {Mishalani, Rabi G and Madanat, Samer M},
+  title     = {Computation of infrastructure transition probabilities using stochastic duration models},
+  journal   = {Journal of Infrastructure systems},
+  year      = {2002},
+  volume    = {8},
+  number    = {4},
+  pages     = {139--148},
+  publisher = {American Society of Civil Engineers},
+}
+
+@Article{chu2005estimation,
+  author  = {Chu, C and Durango-Cohen, P},
+  title   = {Estimation of latent infrastructure performance models using time series analysis},
+  journal = {ASCE Journal of Transportation Engineering (under review)},
+  year    = {2005},
+}
+
+@Article{chu2007estimation,
+  author    = {Chu, Chih-Yuan and Durango-Cohen, Pablo L},
+  title     = {Estimation of infrastructure performance models using state-space specifications of time series models},
+  journal   = {Transportation Research Part C: Emerging Technologies},
+  year      = {2007},
+  volume    = {15},
+  number    = {1},
+  pages     = {17--32},
+  publisher = {Elsevier},
+}
+
+@Article{曹净2014基于,
+  author  = {曹净 and 丁文云 and 赵党书 and 宋志刚 and 刘海明},
+  title   = {基于 LSSVM-ARMA 模型的基坑变形时间序列预测},
+  journal = {Rock and Soil Mechanics},
+  year    = {2014},
+  lang    = {zh},
+  pinyin  = {caojingdingwenyunzhaodangshusongzhigang},
+}
+
+@Article{文明2015地铁车站施工过程中地表沉降的,
+  author  = {文明 and 张顶立 and 房倩 and 张良以},
+  title   = {地铁车站施工过程中地表沉降的 NARXNN 时间序列预测模型},
+  journal = {岩石力学与工程学报},
+  year    = {2015},
+  volume  = {34},
+  number  = {s1},
+  pages   = {3306--3312},
+  lang    = {zh},
+  pinyin  = {wenmingzhangdinglifangqianzhangliangyi},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
