--- a/tex/Chap3.tex
+++ b/tex/Chap3.tex
@@ -2,10 +2,19 @@
 \chapter{盾构隧道服役性能预测}
 \label{chap:prediction}
 
-正文描述
+概述。由于数据缺失，拟采用沉降数据进行测试。
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{基于时间序列的预测方法}
+\section{数据准备与处理}
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{时间序列与神经网络预测}
 
 正文
 
@@ -13,7 +22,15 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{基于深度学习的预测方法}
+\section{深度神经网络预测方法}
+
+正文
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{二维神经网络预测}
 
 正文
 
