--- a/tex/Chap4.tex
+++ b/tex/Chap4.tex
@@ -4,6 +4,16 @@
 
 正文描述
 
+Docker虚拟化
+
+RESTful接口
+
+消息中间件
+
+大数据平台
+
+微服务
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{概述}
 
